<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_24"
        android:title="searchFilter"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView">
    </item>

    <item
        android:id="@+id/menu_filter"
        android:icon="@drawable/ic_filter_list_24dp"
        android:title="filterMenu"
        app:showAsAction="ifRoom|collapseActionView">

    </item>

</menu>