...
        app:layout_scrollFlags="scroll|enterAlways"
        app:title="@string/app_name"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleTextColor="@android:color/white" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_meeting_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="57dp"
            android:layout_marginRight="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/fragment_meeting"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/activity_add_meeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:src="@drawable/ic_add_24dp"
            android:tintMode="src_in"
...
